--- a/src/app/components/price-overview/price-overview.component.html
+++ b/src/app/components/price-overview/price-overview.component.html
@@ -1,30 +1,30 @@
 <section class="price-section modern-container">
-    <div class="price-content">
-      <!-- Columna izquierda -->
-      <div class="price-left">
-        <!-- Ejemplo usando FontAwesome; ajusta el icono según lo que desees -->
-        <div class="icon">
-          <i class="fa-solid fa-calculator"></i>
-        </div>
-        <h2 class="price-title">{{ sectionTitle }}</h2>
-        <p class="price-intro">
-          {{ sectionIntro }}
-        </p>
+  <div class="price-content">
+    <!-- Columna izquierda -->
+    <div class="price-left">
+      <div class="icon">
+        <i class="fa-solid fa-calculator"></i>
       </div>
-  
-      <!-- Columna derecha -->
-      <div class="price-right">
-        <div class="price-factor" *ngFor="let factor of factors">
+      <h2 class="price-title">{{ 'PRICE_OVERVIEW.TITLE' | translate }}</h2>
+      <p class="price-intro">
+        {{ 'PRICE_OVERVIEW.INTRO' | translate }}
+      </p>
+    </div>
+
+    <!-- Columna derecha -->
+    <div class="price-right">
+      <ng-container *ngFor="let factor of factors">
+        <div class="price-factor">
           <div class="factor-header">
             <h3 class="factor-number">{{ factor.number }}</h3>
-            <h4 class="factor-title">{{ factor.title }}</h4>
+            <h4 class="factor-title">{{ factor.title | translate }}</h4>
           </div>
           <hr />
           <p class="factor-description">
-            {{ factor.description }}
+            {{ factor.description | translate }}
           </p>
         </div>
-      </div>
+      </ng-container>
     </div>
-  </section>
-  
+  </div>
+</section>
