--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,5 +1,5 @@
 <div class="services-container">
-    <h2 class="services-title">Servicios</h2>
+    <h2 class="services-title">{{"SERVICES.TITLE" | translate }} </h2>
 
     <div class="cards-container">
       <!-- Iteración para cada servicio -->
@@ -10,13 +10,13 @@
       >
         <!-- Capa de contenido sobre el fondo -->
         <div class="service-card-overlay">
-          <h3>{{ service.title }}</h3>
-          <p>{{ service.description }}</p>
+          <h3>{{ service.titleKey | translate  }}</h3>
+          <p>{{ service.descriptionKey | translate }}</p>
         </div>
       </div>
     </div>
 
-    <button class="btn-primary">
-      Reservar ahora
+    <button class="btn-primary" (click)="openWhatsApp()">
+      {{"SERVICES.BOOK_NOW" | translate }}
     </button>
 </div>
